--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,4 +27,10 @@
   .thumbnailImage {
     @apply rounded-sm object-cover md:rounded;
   }
+  .loginImage {
+    @apply object-cover -z-10 !hidden opacity-60 sm:!inline;
+  }
+  .input {
+    @apply w-full rounded bg-[#333] px-5 py-3.5 placeholder-[gray] outline-none focus:bg-[#454545];
+  }
 }
